--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,118 +1,28 @@
-* {
-    box-sizing: border-box;
-  }
+:root {
+  --spacing: 8px;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 250ms;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+body {
+  font-family: Helvetica, Sans-Serif;
+  color: #444444;
+  font-size: 9pt;
+  background-color: #FAFAFA;
+  background-color: #eeeeee;
+  // margin: 0;
+  padding: 60px 15px 0 15px;
   
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-      'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-size: 1em;
-    line-height: 1.5;
-    color: black;
-    margin: 0;
-    // display: flex;
-    justify-content: center;
-    }
-  
+  line-height: 1.5;
+  } 
+
   a {
     text-decoration: none;
+    color: #444444;
   }
-  
-  p {
-    margin: 0;
-  }
-  
-  .search-container {
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    position: fixed;
-    background-color: #3f57b3;
-    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 1px rgb(0 0 0 / 14%), 0 2px 1px rgb(0 0 0 / 20%);
-  }
-  
-  .search-form {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .search-form input {
-    width: 20%;
-    border-radius: 4px 0 0 4px;
-    border: none;
-    outline: none;
-    background-color: #fff;
-    padding: 8px 10px;
-    font: inherit;
-  }
-  
-  .search-form button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 3em;
-    border: none;
-    background-color: rgb(200, 200, 200);
-  
-    border-radius: 0 4px 4px 0;
-    cursor: pointer;
-  }
-  
-  .search-form button:hover,
-  .search-form button:focus {
-    background-color: rgb(180, 180, 180);
-    transition: all 0.3s;
-  }
-  // ==============================================================================================
- 
-  // ===========
-  .btn-load-more.is-hidden {
-    display: none;
-  }
-  
-  .btn-load-more {
-    display: block;
-    margin: 25px auto 0 auto;
-    padding: 8px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #3f57b3;
-    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
-    font: inherit;
-    color: white;
-    cursor: pointer;
-  }
-  // ==============================================================================================
-  .btn-to-top {
-    position: fixed;
-    bottom: 3vh;
-    right: 1vw;
-    z-index: 1000;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    background: #3f57b3;
-    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
-    color: white;
-    cursor: pointer;
-    opacity: 0;
-    visibility: hidden;
-    transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  }
-  
-  .btn-to-top--visible {
-    opacity: 1;
-    visibility: visible;
-    transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  }
-  
-  .btn-load-more:hover,
-  .btn-to-top:hover {
-    background-color: #2b3e88;
-    transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  }
+
